tests/ui/type-alias-impl-trait/normalize-hidden-types.current.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/normalize-hidden-types.rs:26:20
   |
LL |     fn define() -> Opaque {
   |                    ^^^^^^ expected `*const (dyn FnOnce(()) + 'static)`, got `*const dyn for<'a> FnOnce(<u8 as Trait>::Gat<'a>)`
   |
note: previous use here
  --> $DIR/normalize-hidden-types.rs:27:9
   |
LL |         dyn_hoops::<_>(0)
   |         ^^^^^^^^^^^^^^^^^

error: concrete type differs from previous defining opaque type use
  --> $DIR/normalize-hidden-types.rs:34:22
   |
LL |     fn define_1() -> Opaque { dyn_hoops::<_>(0) }
   |                      ^^^^^^ expected `*const (dyn FnOnce(()) + 'static)`, got `*const dyn for<'a> FnOnce(<u8 as Trait>::Gat<'a>)`
   |
note: previous use here
  --> $DIR/normalize-hidden-types.rs:34:31
   |
LL |     fn define_1() -> Opaque { dyn_hoops::<_>(0) }
   |                               ^^^^^^^^^^^^^^^^^

error: concrete type differs from previous defining opaque type use
  --> $DIR/normalize-hidden-types.rs:43:25
   |
LL |         let _: Opaque = dyn_hoops::<u8>(0);
   |                         ^^^^^^^^^^^^^^^^^^ expected `*const (dyn FnOnce(()) + 'static)`, got `*const dyn for<'a> FnOnce(<u8 as Trait>::Gat<'a>)`
   |
note: previous use here
  --> $DIR/normalize-hidden-types.rs:44:9
   |
LL |         None
   |         ^^^^

error: concrete type differs from previous defining opaque type use
  --> $DIR/normalize-hidden-types.rs:52:25
   |
LL |         let _: Opaque = dyn_hoops::<_>(0);
   |                         ^^^^^^^^^^^^^^^^^ expected `*const (dyn FnOnce(()) + 'static)`, got `*const dyn for<'a> FnOnce(<u8 as Trait>::Gat<'a>)`
   |
note: previous use here
  --> $DIR/normalize-hidden-types.rs:53:9
   |
LL |         None
   |         ^^^^

error: aborting due to 4 previous errors

